crates/plotnik-lib/tests/05-typegen/quantifiers/error_optional_internal_capture_needs_row.txt
Q = {
  (identifier) @mod
  (decorator) @dec
}?
==== diagnostics ====
error: the definition names the optional itself, so each `?` element — a row of captures — is left without a type name
 --> query.ptk:1:5
  |
1 |   Q = {
  |  _____^
2 | |   (identifier) @mod
3 | |   (decorator) @dec
4 | | }?
  | |__^
  |
help: name the element type in its own definition, then quantify a reference to it: `Elem = ...` and `(Elem)?`
